--- a/labb1/src/App.css
+++ b/labb1/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 500px;
+  margin: 0 auto;
 }
 
 .App-logo {
@@ -35,4 +37,31 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+form{
+  display: block;
+  width: 100%;
+}
+label{
+  width: 50%;
+  display: block;
+  margin: auto;
+}
+input{
+  width: 250px
+}
+textarea{
+  width: 100%;
+}
+.profile{
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  background: rgba(125, 125,125, .5);
+  margin: 50px 0;
+}
+
+.profile img{
+  width:100px;
 }
